; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/inject-helper/extr_inject-helper.c_main.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/inject-helper/extr_inject-helper.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@INJECT_ERROR_INVALID_PARAMS = common dso_local global i32 0, align 4
@SEM_FAILCRITICALERRORS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %13 = load i32, i32* @MAX_PATH, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %6, align 8
  %16 = alloca i64, i64 %14, align 16
  store i64 %14, i64* %7, align 8
  %17 = load i32, i32* @INJECT_ERROR_INVALID_PARAMS, align 4
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* @SEM_FAILCRITICALERRORS, align 4
  %19 = call i32 @SetErrorMode(i32 %18)
  %20 = call i32 (...) @load_debug_privilege()
  %21 = call i32 (...) @GetCommandLineW()
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32* @CommandLineToArgvW(i32 %22, i32* %4)
  store i32* %23, i32** %9, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %50

26:                                               ; preds = %2
  %27 = load i32, i32* %4, align 4
  %28 = icmp eq i32 %27, 4
  br i1 %28, label %29, label %50

29:                                               ; preds = %26
  %30 = load i32, i32* @MAX_PATH, align 4
  %31 = call i64 @GetModuleFileNameW(i32* null, i64* %16, i32 %30)
  store i64 %31, i64* %11, align 8
  %32 = load i64, i64* %11, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %49

34:                                               ; preds = %29
  %35 = call i64* @wcsrchr(i64* %16, i8 signext 92)
  store i64* %35, i64** %12, align 8
  %36 = load i64*, i64** %12, align 8
  %37 = icmp ne i64* %36, null
  br i1 %37, label %38, label %48

38:                                               ; preds = %34
  %39 = load i64*, i64** %12, align 8
  %40 = getelementptr inbounds i64, i64* %39, i32 1
  store i64* %40, i64** %12, align 8
  store i64 0, i64* %40, align 8
  %41 = load i64*, i64** %12, align 8
  %42 = load i32*, i32** %9, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 1
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @wcscpy(i64* %41, i32 %44)
  %46 = load i32*, i32** %9, align 8
  %47 = call i32 @inject_helper(i32* %46, i64* %16)
  store i32 %47, i32* %10, align 4
  br label %48

48:                                               ; preds = %38, %34
  br label %49

49:                                               ; preds = %48, %29
  br label %50

50:                                               ; preds = %49, %26, %2
  %51 = load i32*, i32** %9, align 8
  %52 = call i32 @LocalFree(i32* %51)
  %53 = load i8**, i8*** %5, align 8
  %54 = call i32 @UNUSED_PARAMETER(i8** %53)
  %55 = load i32, i32* %10, align 4
  store i32 %55, i32* %3, align 4
  %56 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %56)
  %57 = load i32, i32* %3, align 4
  ret i32 %57
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @SetErrorMode(i32) #2

declare dso_local i32 @load_debug_privilege(...) #2

declare dso_local i32 @GetCommandLineW(...) #2

declare dso_local i32* @CommandLineToArgvW(i32, i32*) #2

declare dso_local i64 @GetModuleFileNameW(i32*, i64*, i32) #2

declare dso_local i64* @wcsrchr(i64*, i8 signext) #2

declare dso_local i32 @wcscpy(i64*, i32) #2

declare dso_local i32 @inject_helper(i32*, i64*) #2

declare dso_local i32 @LocalFree(i32*) #2

declare dso_local i32 @UNUSED_PARAMETER(i8**) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
